v2.4.0beta4 "Chimera" (2017-Dec-22)
-----------------------------------
* Attention: The DiscoDNC does not yet fully work with Java 9. Compiler compliance level 1.8 is required.
  - Thanks to Zóltan Mátyás for pointing this out.
* Tests are all ported to JUnit5.
* DNC bounds derived from two curves (i.e., other than arrival bound algorithms)
  - package renamed from de.uni_kl.cs.disco.nc.operations to de.uni_kl.cs.disco.nc.bounds
  - Computations (Backlog, Delay, LeftOverService and Output) are called via a dispatcher, Bound.java.
  - Name simplifications: drop "Bound" suffix for Backlog, Delay, and Output classes.  
* Method cleanups in curve classes. Code improvements apply to the DNC implementation:
  - Renamed auto-generated method names that started with "isIs" or "isHas" and removed underscores from these method names.
  - Rate latencies: merged getRL_Property() into isRateLateny(); renamed setRL_Property() to setRateLateny().
  - Token buckets: merged getTB_Property() into isTokenBucket(); renamed setTB_Property() to setTokenBucket().
  - getDelayedInfiniteBurst_Property renamed to isDelayedInfiniteBurst.
  - Merged getTB_Burst into getBurst.
  - Created a rate-latency optimized code path for getLatenty(), similar to getBurst().
* Comments and JavaDocs cleanups, various stability and performance improvements.

v2.4.0beta3 "Chimera" (2017-Sep-01)
-----------------------------------
Simplifications to the code structure for streamlined use. This work requires Java 8+ as it relies on static methods in interfaces.
* CalculatorConfig singleton: fix execution of all tests, run time back to previous level.
* Split Analysis.java into three parts:
  - The Analysis interface that also provides static methods for simple execution of analyses.
  - The abstract class AbstractAnalysis holds member variables for the network, the configurations and the results.
  All analyses in de.uni_kl.cs.disco.nc.analyses extend AbstractAnalysis and implement Analysis.