@@ -31,145 +31,146 @@ package de.uni_kl.cs.disco.nc;
 import java.io.File;
 
 public final class CalculatorConfig {
-    private static CalculatorConfig instance = new CalculatorConfig();
-    private NumImpl NUM_IMPLEMENTATION = NumImpl.REAL_DOUBLE_PRECISION;
-    private CurveImpl CURVE_IMPLEMENTATION = CurveImpl.DNC;
-    private OperationImpl OPERATION_IMPLEMENTATION = OperationImpl.DNC;
-    private boolean ARRIVAL_CURVE_CHECKS = false;
-    private boolean SERVICE_CURVE_CHECKS = false;
-    private boolean MAX_SERVICE_CURVE_CHECKS = false;
-    private boolean FIFO_MUX_CHECKS = false;
-    private boolean DECONVOLUTION_CHECKS = false;
-    protected CalculatorConfig() {
-    }
+	private static CalculatorConfig instance = new CalculatorConfig();
+	private NumImpl NUM_IMPLEMENTATION = NumImpl.REAL_DOUBLE_PRECISION;
+	private CurveImpl CURVE_IMPLEMENTATION = CurveImpl.DNC;
+	private OperationImpl OPERATION_IMPLEMENTATION = OperationImpl.DNC;
+	private boolean ARRIVAL_CURVE_CHECKS = false;
+	private boolean SERVICE_CURVE_CHECKS = false;
+	private boolean MAX_SERVICE_CURVE_CHECKS = false;
+	private boolean FIFO_MUX_CHECKS = false;
+	private boolean DECONVOLUTION_CHECKS = false;
 
-    public static CalculatorConfig getInstance() {
-        return instance;
-    }
+	protected CalculatorConfig() {
+	}
 
-    public NumImpl getNumImpl() {
-        return NUM_IMPLEMENTATION;
-    }
+	public static CalculatorConfig getInstance() {
+		return instance;
+	}
 
-    public boolean setNumImpl(NumImpl num_impl) {
-        if (NUM_IMPLEMENTATION == num_impl) {
-            return false;
-        } else {
-            NUM_IMPLEMENTATION = num_impl;
-            return true;
-        }
-    }
+	public NumImpl getNumImpl() {
+		return NUM_IMPLEMENTATION;
+	}
 
-    public CurveImpl getCurveImpl() {
-        return CURVE_IMPLEMENTATION;
-    }
+	public boolean setNumImpl(NumImpl num_impl) {
+		if (NUM_IMPLEMENTATION == num_impl) {
+			return false;
+		} else {
+			NUM_IMPLEMENTATION = num_impl;
+			return true;
+		}
+	}
 
-    private void checkMPARTC() throws RuntimeException {
-        File f = new File("rtc.jar");
-        if (!f.exists() && !f.isDirectory()) {
-            File f2 = new File("lib/rtc.jar");
-            if (!f2.exists() && !f2.isDirectory()) {
-                throw new RuntimeException("Error: rtc.jar not found in directory " + f.getParent() + " or " + f2.getParent() + ".");
-            }
-        }
-    }
+	public CurveImpl getCurveImpl() {
+		return CURVE_IMPLEMENTATION;
+	}
 
-    public boolean setCurveImpl(CurveImpl curve_impl) {
-        checkMPARTC();
+	private void checkMPARTC() throws RuntimeException {
+		String classpath = System.getProperty("java.class.path");
+		for (String classpathEntry : classpath.split(File.pathSeparator)) {
+			if (classpathEntry.contains("rtc.jar")) {
+				return;
+			}
+		}
+		throw new RuntimeException("rtc.jar cannot be found on the classpath!");
+	}
 
-        if (CURVE_IMPLEMENTATION == curve_impl) {
-            return false;
-        }
-        CURVE_IMPLEMENTATION = curve_impl;
-        return true;
-    }
+	public boolean setCurveImpl(CurveImpl curve_impl) {
+		checkMPARTC();
 
-    public OperationImpl getOperationImpl() {
-        return OPERATION_IMPLEMENTATION;
-    }
+		if (CURVE_IMPLEMENTATION == curve_impl) {
+			return false;
+		}
+		CURVE_IMPLEMENTATION = curve_impl;
+		return true;
+	}
 
-    public void setOperationImpl(OperationImpl operation_impl) {
-        checkMPARTC();
-        OPERATION_IMPLEMENTATION = operation_impl;
-    }
+	public OperationImpl getOperationImpl() {
+		return OPERATION_IMPLEMENTATION;
+	}
 
-    public void disableAllChecks() {
-        ARRIVAL_CURVE_CHECKS = false;
-        SERVICE_CURVE_CHECKS = false;
-        MAX_SERVICE_CURVE_CHECKS = false;
-        FIFO_MUX_CHECKS = false;
-        DECONVOLUTION_CHECKS = false;
-    }
+	public void setOperationImpl(OperationImpl operation_impl) {
+		checkMPARTC();
+		OPERATION_IMPLEMENTATION = operation_impl;
+	}
 
-    public void enableAllChecks() {
-        ARRIVAL_CURVE_CHECKS = true;
-        SERVICE_CURVE_CHECKS = true;
-        MAX_SERVICE_CURVE_CHECKS = true;
-        FIFO_MUX_CHECKS = true;
-        DECONVOLUTION_CHECKS = true;
-    }
+	public void disableAllChecks() {
+		ARRIVAL_CURVE_CHECKS = false;
+		SERVICE_CURVE_CHECKS = false;
+		MAX_SERVICE_CURVE_CHECKS = false;
+		FIFO_MUX_CHECKS = false;
+		DECONVOLUTION_CHECKS = false;
+	}
 
-    public boolean exec_arrival_curve_checks() {
-        return ARRIVAL_CURVE_CHECKS;
-    }
+	public void enableAllChecks() {
+		ARRIVAL_CURVE_CHECKS = true;
+		SERVICE_CURVE_CHECKS = true;
+		MAX_SERVICE_CURVE_CHECKS = true;
+		FIFO_MUX_CHECKS = true;
+		DECONVOLUTION_CHECKS = true;
+	}
 
-    public boolean exec_service_curve_checks() {
-        return SERVICE_CURVE_CHECKS;
-    }
+	public boolean exec_arrival_curve_checks() {
+		return ARRIVAL_CURVE_CHECKS;
+	}
 
-    public boolean exec_max_service_curve_checks() {
-        return MAX_SERVICE_CURVE_CHECKS;
-    }
+	public boolean exec_service_curve_checks() {
+		return SERVICE_CURVE_CHECKS;
+	}
 
-    public boolean exec_fifo_mux_checks() {
-        return FIFO_MUX_CHECKS;
-    }
+	public boolean exec_max_service_curve_checks() {
+		return MAX_SERVICE_CURVE_CHECKS;
+	}
 
-    public boolean exec_deconvolution_checks() {
-        return DECONVOLUTION_CHECKS;
-    }
+	public boolean exec_fifo_mux_checks() {
+		return FIFO_MUX_CHECKS;
+	}
 
-    @Override
-    public String toString() {
-        StringBuffer calculator_config_str = new StringBuffer();
+	public boolean exec_deconvolution_checks() {
+		return DECONVOLUTION_CHECKS;
+	}
 
-        calculator_config_str.append(getNumImpl().toString());
-        calculator_config_str.append(", ");
-        calculator_config_str.append(getCurveImpl().toString());
+	@Override
+	public String toString() {
+		StringBuffer calculator_config_str = new StringBuffer();
 
-        if (exec_arrival_curve_checks()) {
-            calculator_config_str.append(", ");
-            calculator_config_str.append("AC checks");
-        }
-        if (exec_service_curve_checks()) {
-            calculator_config_str.append(", ");
-            calculator_config_str.append("SC checks");
-        }
-        if (exec_max_service_curve_checks()) {
-            calculator_config_str.append(", ");
-            calculator_config_str.append("MSC checks");
-        }
-        if (exec_fifo_mux_checks()) {
-            calculator_config_str.append(", ");
-            calculator_config_str.append("FIFO checks");
-        }
-        if (exec_deconvolution_checks()) {
-            calculator_config_str.append(", ");
-            calculator_config_str.append("deconv checks");
-        }
+		calculator_config_str.append(getNumImpl().toString());
+		calculator_config_str.append(", ");
+		calculator_config_str.append(getCurveImpl().toString());
 
-        return calculator_config_str.toString();
-    }
+		if (exec_arrival_curve_checks()) {
+			calculator_config_str.append(", ");
+			calculator_config_str.append("AC checks");
+		}
+		if (exec_service_curve_checks()) {
+			calculator_config_str.append(", ");
+			calculator_config_str.append("SC checks");
+		}
+		if (exec_max_service_curve_checks()) {
+			calculator_config_str.append(", ");
+			calculator_config_str.append("MSC checks");
+		}
+		if (exec_fifo_mux_checks()) {
+			calculator_config_str.append(", ");
+			calculator_config_str.append("FIFO checks");
+		}
+		if (exec_deconvolution_checks()) {
+			calculator_config_str.append(", ");
+			calculator_config_str.append("deconv checks");
+		}
 
-    public enum NumImpl {
-        REAL_SINGLE_PRECISION, REAL_DOUBLE_PRECISION, RATIONAL_INTEGER, RATIONAL_BIGINTEGER
-    }
+		return calculator_config_str.toString();
+	}
 
-    public enum CurveImpl {
-        DNC, MPA_RTC
-    }
+	public enum NumImpl {
+		REAL_SINGLE_PRECISION, REAL_DOUBLE_PRECISION, RATIONAL_INTEGER, RATIONAL_BIGINTEGER
+	}
 
-    public enum OperationImpl {
-        DNC, NATIVE
-    }
+	public enum CurveImpl {
+		DNC, MPA_RTC
+	}
+
+	public enum OperationImpl {
+		DNC, NATIVE
+	}
 }
