@@ -1,8 +1,9 @@
 v2.4.0beta4 "Chimera" (2017-Dec-22)
 -----------------------------------
 * Attention: The DiscoDNC does not yet fully work with Java 9. Compiler compliance level 1.8 is required.
-  - Thanks to Zóltan Mátyás for pointing this out.
+  - Thanks to Zoltán Mátyás for pointing this out.
 * Tests are all ported to JUnit5.
+* Check the classpath for rtc.jar instead of using a hardcoded location (patch by Zoltán Mátyás). 
 * DNC bounds derived from two curves (i.e., other than arrival bound algorithms)
   - package renamed from de.uni_kl.cs.disco.nc.operations to de.uni_kl.cs.disco.nc.bounds
   - Computations (Backlog, Delay, LeftOverService and Output) are called via a dispatcher, Bound.java.
